2019-10-14  youenn fablet  <youenn@apple.com>

        Reuse existing web processes for running service workers
        https://bugs.webkit.org/show_bug.cgi?id=202195

        Reviewed by Chris Dumez.

        * http/tests/workers/service/resources/postmessage-after-sw-process-crash.js:
        (async.doTest):
        * http/tests/workers/service/resources/postmessage-after-terminate.js:
        (async.doTest):
        * http/tests/workers/service/resources/postmessage-after-terminating-hung-worker.js:
        (async.doTest):
        * http/wpt/service-workers/online.https.html:
        * http/wpt/service-workers/service-worker-different-process.https-expected.txt: Added.
        * http/wpt/service-workers/service-worker-different-process.https.html: Added.
        * http/wpt/service-workers/service-worker-process-worker.js: Added.

2019-10-12  Ryosuke Niwa  <rniwa@webkit.org>

        [iOS] Crash in WebCore::DOMWindow::incrementScrollEventListenersCount
        https://bugs.webkit.org/show_bug.cgi?id=202878

        Reviewed by Alex Christensen.

        Added a regression test for the crash.

        * fast/events/scroll-event-on-document-without-window-expected.txt: Added.
        * fast/events/scroll-event-on-document-without-window.html: Added.

2019-10-12  Ryosuke Niwa  <rniwa@webkit.org>

        Invoke callback registered by requestIdleCallback
        https://bugs.webkit.org/show_bug.cgi?id=202824

        Reviewed by Antti Koivisto.

        Added basic regression tests. The second test (requestidlecallback-is-not-called-when-canceled.html)
        found a spec bug (https://github.com/w3c/requestidlecallback/issues/83).

        * requestidlecallback/requestidlecallback-is-called-expected.txt: Added.
        * requestidlecallback/requestidlecallback-is-called.html: Added.
        * requestidlecallback/requestidlecallback-is-not-called-when-canceled-expected.txt: Added.